
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "soap", email = ""},
]
dependencies = [
    "discord-py>=2.2.3",
    "requests>=2.30.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
    "countrywrangler>=0.2.7",
    "python-Levenshtein>=0.21.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
